[gd_scene load_steps=12 format=3 uid="uid://ckgxktaqf5p1t"]

[ext_resource type="Script" uid="uid://uhirm5bcsbw7" path="res://scenes/character/character_types/ram_enemy/ram_enemy.gd" id="1_yj2ad"]
[ext_resource type="Script" uid="uid://c4w6tnpbhvqj" path="res://scenes/character/states/state_machine.gd" id="2_wgv3h"]
[ext_resource type="Script" uid="uid://w0hgp7qm6m5r" path="res://scenes/character/states/test_enemy/enemy_idle.gd" id="3_3wf1k"]
[ext_resource type="Script" uid="uid://ql3aslw5b501" path="res://scenes/character/states/test_enemy/enemy_moving.gd" id="5_hin8e"]
[ext_resource type="SpriteFrames" uid="uid://doj30flsjdecu" path="res://scenes/character/character_types/player/stella.tres" id="6_epqyj"]
[ext_resource type="Script" uid="uid://dckyckrxwcbpb" path="res://scenes/character/detection/hitbox.gd" id="7_q4orn"]
[ext_resource type="Script" uid="uid://bnb4sqxbto1ri" path="res://scenes/character/detection/hurtbox.gd" id="8_j2b52"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lcnxo"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spa54"]
size = Vector2(20, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ex5l"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_2fsoc"]
radius = 128.0

[node name="RamEnemy" type="CharacterBody2D" node_paths=PackedStringArray("body_hitbox", "player_looker", "sprite")]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_yj2ad")
body_hitbox = NodePath("Hitbox")
player_looker = NodePath("PlayerLooker")
sprite = NodePath("CharacterAnimatedSprite")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("default_state", "chara", "debug")]
script = ExtResource("2_wgv3h")
default_state = NodePath("Idle")
chara = NodePath("..")
debug = NodePath("../State")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("chara", "sprite")]
script = ExtResource("3_3wf1k")
chara = NodePath("../..")
sprite = NodePath("../../CharacterAnimatedSprite")

[node name="Moving" type="Node" parent="StateMachine" node_paths=PackedStringArray("chara", "sprite")]
script = ExtResource("5_hin8e")
chara = NodePath("../..")
sprite = NodePath("../../CharacterAnimatedSprite")

[node name="CharacterAnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = ExtResource("6_epqyj")
animation = &"moving down"
autoplay = "idle up"

[node name="CharacterCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lcnxo")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 24
collision_mask = 0
monitoring = false
script = ExtResource("7_q4orn")
knockback = 500.0
can_hit_player = true

[node name="Hitbox2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_spa54")
debug_color = Color(0.968384, 0, 0.468215, 0.42)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource("8_j2b52")

[node name="Hurtbox2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_7ex5l")

[node name="Label" type="Label" parent="."]
offset_left = 6.0
offset_top = 4.0
offset_right = 45.0
offset_bottom = 27.0
text = "aaa"

[node name="State" type="Label" parent="."]
offset_left = -31.0
offset_top = -32.0
offset_right = 2.0
offset_bottom = -9.0
text = "aaa"

[node name="PlayerDetectionRange" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionRange"]
shape = SubResource("CircleShape2D_2fsoc")

[node name="ChaseTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.6
one_shot = true
autostart = true

[node name="PlayerLooker" type="Node2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetectionRange" to="." method="_on_player_detection_range_body_entered"]
[connection signal="body_exited" from="PlayerDetectionRange" to="." method="_on_player_detection_range_body_exited"]
